r32 (16. 10. 2021):
Heat Street: Fixed a crash at "Light the van on fire!" objective

r31 (15. 10. 2021):
Added tracker for achievements "For all you legends", "Buzzbomb" and "Cloaker Charmer"
Achievement "Master of Floatation" is now disabled in loud as per Hotfix 212.1

r30 (14. 10. 2021):
Added trackers for Black Cat Heist
Added "Tracker Alignment" option
Added a lot of achievement tracking (mostly weapon kills)
Fixed an issue where some trackers were not replaced correctly
Show Timers Tracker: Fixed an issue where upgrades were visible if the unit did not have any upgrades available
Firestarter Day 1: Added tracker for achievement "Lord of War"
Transport: Downtown: Fixed a crash when civilian died
The Ukrainian Prisoner Heist: Added tracker for achievement "This Calls for a Round of Sputniks!" - both kills and accuracy
The White House: Fixed issues with the gas tracker in the Oval Office

r29 (24. 09. 2021):
Added "Escape Chance" to heists with possible escape
Added "Show Only Waypoints" option
Added "Don't Show Trade Delay Tracker in Stealth" option
Aggregate Equipment Tracker: Fixed a gap
Difficulty Tracker: Disabled in Holdout mode
Drill/Saw Tracker: Drill/Saw will appear blue if it can autorestart (host only)
Menu: New options are in yellow color

r28 (02. 09. 2021):
Added support for Cook Off (Daylight)
GO Bank: Fixed an issue where vault timer could get stuck when vault opened

r27 (25. 08. 2021):
Fixed a crash when waypoints are still visible during heist restart/termination
Fixed an issue where a few icons in waypoints are corrupted/malformed
The Big Bank: Fixed waypoint position issue when timelock is counting down

r26 (24. 08. 2021):
Added waypoint option for "Pager Callback Timers"
Added waypoint option for "Timers"
Rewrote waypoint system for better speed and extensibility
Fixed an issue where time trackers are not updated if certain HUD mods are installed (client only)